# rrm

./: .gitignore  .gitmodules  BoundaryController.cpp  CMakeLists.txt  CMakePresets.json  Canvas2D.cpp  Canvas2D.h  Canvas3D.cpp  Canvas3D.h  ColorMap.cpp  ColorMap.h  FlowProperty.h  FlowVisualizationController.cpp  FlowVisualizationController.h  HorizonController.cpp  HorizonController.h  InputSketch.cpp  InputSketch.h  InterfaceRRM.pro  InterfaceRRM.pro.xt5272  MainWindow (boreas's conflicted copy 2015-10-22).cpp  MainWindow.cpp  MainWindow.h  README  README.md  SketchingScene.cpp  SketchingScene.h  VTKData.cpp  VTKData.h  canvasComputation (boreas's conflicted copy 2015-10-22).cpp  canvasComputation (boreas's conflicted copy 2015-10-22).h  canvasComputation.cpp  canvasComputation.h  fragment_shader.frag  images.qrc  license.md  main.cpp  rrm_3rd_party_libraries.md  shaders.qrc  vertex_shader.vert
libs/Tucano/: BoundingBox3.cpp  BoundingBox3.hpp  CMakeLists.txt  Camera.hpp  FlyCamera.hpp  FrameBuffer.cpp  GLTexture.hpp  Misc.hpp  README.md  Shader.hpp  TextureManager.hpp  Trackball.hpp
libs/stratmod/: CMakeLists.txt  README.md  stratmodConfig.cmake.in
libs/stratmod/cmake/: Darwin_Clang-OPenMP_Toolchain.cmake
libs/stratmod/doc/: Presentation_StratModLib.pptx
libs/stratmod/src/: binary2json.cpp  binary2xml.cpp  change_resolution.cpp  first_test.cpp  json2binary.cpp  main.cpp  region.cpp  serialization_definitions.hpp  smodeller.cpp  smodeller.hpp  smodeller_impl.cpp  smodeller_impl.hpp  smodeller_primitives.hpp  stratmod_win_dll_export_handler.hpp  sutilities.cpp  sutilities.hpp  test_boundary.cpp  test_mesh.cpp  test_regions.cpp  testing_definitions.hpp  use_smodeller.cpp  use_sutilities.cpp  view_boundary_curves.m  win_dll_export_handler.hpp  xml2binary.cpp
libs/trimesh2/: CMakeLists.txt
src/: CMakeLists.txt
src/Apps/: CMakeLists.txt  TreeModel.cpp  TreeModel.h
src/Apps/3dView/: BoundingBox3D.cpp  BoundingBox3D.h  Canvas3D.cpp  Canvas3D.h  CrossPlane.cpp  CrossPlane.h  GradientBackgroundShader.cpp  GradientBackgroundShader.hpp  Model3DUtils.cpp  Model3DUtils.hpp  Scene3D.cpp  Scene3D.h  Surface.cpp  Surface.h  View3DCanvas.cpp  View3DCanvas.hpp  View3DWindow.cpp  View3DWindow.hpp  canvas3d.cpp  canvas3d_refactored.cpp  canvas3d_refactored.h  gradient_background_shader.cpp  gradient_background_shader.hpp  model3d_utils.cpp  model3d_utils.hpp  scene3d.cpp  scene3d.h  scene3d_refactored.cpp  scene3d_refactored.h
src/Apps/3dview/: canvas3d.h
src/Apps/Controller/: CanvasComputation.cpp  CanvasComputation.h  DialogInputFlowComputation.h  FlowComputationModule.cpp  FlowComputationModule.h  MainFlow.cpp  MainModeller.cpp  MainSimulator.cpp  MainWindow.cpp  MainWindow.h  MainWindow_.cpp  MainWindow_.h  Sketching2DModule.h  canvasComputation.cpp  canvasComputation.h  main.cpp  mainwindowsimulation.cpp
src/Apps/MainWindow/: Canvas3D.cpp  Canvas3D.h  CanvasPath.cpp  CanvasPath.h  ColorPicker.cpp  ColorPicker.h  Controller.cpp  Controller.h  Controller.hpp  Controller.hpp.autosave  CrossSection.h  CrossSectionItemWrapper.cpp  CrossSectionItemWrapper.h  ExtrusionRulesProcessor.cpp  ExtrusionRulesProcessor.hpp  HelpDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Object.h  ObjectItemWrap.cpp  ObjectItemWrap.h  ObjectOpenGLWrapper.cpp  ObjectOpenGLWrapper.h  ObjectTreeItem.h  PathScene.cpp  PathScene.h  Region1.h  RulesProcessor.cpp  RulesProcessor.hpp  Scene.cpp  Scene.h  Scene3D.cpp  Scene3D.h  SketchCanvas.cpp  SketchCanvas.h  SketchScene.cpp  SketchScene.h  SolverInterface.h  SolverRegistration.h  (+19 more)
src/Apps/Model/: Arrangment.hpp  Boundary.hpp  BoundaryRenderable.h  CrossSection.cpp  CrossSection.hpp  CrossSectionTesting.cpp  CrossSectionTesting.hpp  CurveEngine.cpp  CurveEngine.hpp  IDManager.hpp  Intersection.hpp  RegionDetection.cpp  RegionDetection.hpp  StratigraphicCurves.cpp  StratigraphicCurves.hpp  StratigraphicSegment.cpp  StratigraphicSegment.hpp  Stratigraphy.hpp
src/Apps/Modeller/: BoundaryController.cpp  BoundaryController.h  BoundaryItem.cpp  BoundaryItem.h  Canvas2D.cpp  Canvas2D.h  HorizonController.cpp  HorizonController.h  InputSketch.cpp  InputSketch.h  RRMItemCurve.cpp  RRMItemCurve.h  SketchController.cpp  SketchController.hpp  Sketching2DModule.cpp  Sketching2DModule.h  SketchingCanvas.cpp  SketchingCanvas.h  SketchingScene.cpp  SketchingScene.h  StratigraphyItem.cpp  StratigraphyItem.hpp
src/Apps/Resources/: images.qrc  rrm.rc
src/Apps/SBIM/: SBIMSeismicController.cpp  SBIMSeismicController.hpp  SeismicSlice.cpp  SeismicSlice.hpp  SeismicVolume.cpp  SeismicVolume.hpp  SketchSeismic.cpp  SketchSeismic.hpp  SketchSeismicModule.cpp  SketchSeismicModule.hpp
src/Apps/Simulator/: Canvas3D.cpp  Canvas3D.h  CanvasComputation.cpp  CanvasComputation.h  ColorMap.cpp  ColorMap.h  Colorbar.cpp  Colorbar.h  CoordinateAxes.cpp  CoordinateAxes.h  DialogInputFlowComputation.cpp  DialogMeshVisualizationParameters.cpp  DialogMeshVisualizationParameters.h  DialogMeshVisualizationParameters.ui  FlowComputationModule.cpp  FlowComputationModule.h  FlowCrossSection.cpp  FlowCrossSection.h  FlowDiagnosticsInterface.cpp  FlowDiagnosticsInterface.cpp.bak  FlowDiagnosticsInterface.hpp  FlowParametersBar.cpp  FlowParametersBar.h  FlowParametersBar.ui  FlowParametersBar_new.cpp  FlowParametersBar_new.h  FlowProperty.cpp  FlowProperty.h  FlowRenderingOptionsMenu.cpp  FlowRenderingOptionsMenu.h  FlowVisualizationCanvas.cpp  FlowVisualizationCanvas.h  FlowVisualizationController.cpp  FlowVisualizationController.h  FlowWindow.cpp  FlowWindow.h  FormPropertyValues.cpp  FormPropertyValues.h  FormPropertyValues.ui  HelpDialog.cpp  (+25 more)
src/Apps/Sketching/: BoundaryItem2D.cpp  BoundaryItem2D.hpp  CanvasPath.cpp  CanvasPath.h  InputSketch.cpp  InputSketch.h  PathScene.cpp  PathScene.h  PolyQtUtils.cpp  PolyQtUtils.hpp  RegionItem.cpp  RegionItem.hpp  SketchCanvas.cpp  SketchCanvas.h  SketchScene.cpp  SketchScene.h  SketchingCanvas.cpp  SketchingCanvas.h  SketchingWindow.cpp  (+28 more)
src/Core/: CMakeLists.txt
src/apps/: CMakeLists.txt  Info.plist
src/core/: CMakeLists.txt
(+1247 files in other folders)
